Fix form box align on errors, fix preserving contact form info on error

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -288,9 +288,12 @@ form {
     &>div {
         display: flex;
         column-gap: 1em;
-
+        
         >div {
             flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
 
         @media (max-width: 40em) {
